<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    tools:context="cl.jenni.prueba1.EvaluationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/actionsTitleCb_string" />

    <CheckBox
        android:id="@+id/checkbox_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo1_string" />

    <CheckBox
        android:id="@+id/checkbox_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo2_string" />

    <CheckBox
        android:id="@+id/checkbox_3"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo3_string" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:text="@string/happinesQuestion" />

    <SeekBar
        android:id="@+id/happinesSb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Comentarios" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/evaluationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RESULTADO"
        android:textColor="@android:color/white"
        android:theme="@style/AccentButton" />

</LinearLayout>
